# webtech1

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  .pymarkdown.json  404.html  AGENTS.md  README.md  TODO.md  index.html  mkdocs.yml  notes.md  pyproject.toml  rubrics_webtech.html  sitemap.xml
.github/workflows/: deploy.yml
bestanden/: requirements.txt  rubric-webtech.html
docs/: index.md
docs/projecten/: bungalowpark.md  filmfan.md  index.md  programmeerles.md  stage.md
docs/week2/: oop-deel1.md  oop-deel2.md  oop-deel3.md  oop-deel4.md
docs/week3/: python-exceptions.md  sql-deel1.md  sql-deel2.md  sql-deel3.md  sql-deel4.md  sql-deel5.md  sql-deel6.md
docs/week4/: flask-deel1.md  flask-deel2.md  flask-deel3.md  flask-deel4.md
docs/week5/: flask-forms-deel1.md  flask-forms-deel2.md  flask-forms-deel3.md
docs/week6/: flask-views-deel1.md  flask-views-deel2.md  flask-views-deel3.md  flask-views-deel4.md  flask-views-deel5.md
docs/week7a/: user-authentication-deel1.md  user-authentication-deel2.md  user-authentication-deel3.md  user-authentication-deel4.md
docs/week7b/: flask-applicaties-deel1.md  flask-applicaties-deel2.md  flask-applicaties-deel3.md
projecten/: bungalowpark.html  filmfan.html  index.html  programmeerles.html  stage.html
search/: search_index.json
week2/: oop-deel1.html  oop-deel2.html  oop-deel3.html  oop-deel4.html
week3/: python-exceptions.html  sql-deel1.html  sql-deel2.html  sql-deel3.html  sql-deel4.html  sql-deel5.html  sql-deel6.html
week4/: flask-deel1.html  flask-deel2.html  flask-deel3.html  flask-deel4.html
week5/: flask-forms-deel1.html  flask-forms-deel2.html  flask-forms-deel3.html
week6/: flask-views-deel1.html  flask-views-deel2.html  flask-views-deel3.html  flask-views-deel4.html  flask-views-deel5.html
week7a/: user-authentication-deel1.html  user-authentication-deel2.html  user-authentication-deel3.html  user-authentication-deel4.html
week7b/: flask-applicaties-deel1.html  flask-applicaties-deel2.html  flask-applicaties-deel3.html
(+189 files in other folders)
